--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 /mensajes/*.txt
 /UDP/Logs/*.txt
 /UDP/ArchivosRecibidos/*.txt
-/TCP/receivedFiles/*.txt
+/TCP/received_files/*.txt
 /TCP/logs/*.txt
